<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tfg.example.org.materialdesign.MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:weightSum="1"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
    <Button
         android:id="@+id/button00"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="lanzarVistaPelicula"
         android:text="@string/mas_votadas"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toStartOf="@+id/button01"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"  />
    <Button
         android:id="@+id/button000"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="lanzarMapa"
         android:text="@string/cines_cercanos"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="8dp"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintEnd_toStartOf="@+id/button01"
         app:layout_constraintStart_toEndOf="@+id/button00"
         app:layout_constraintTop_toTopOf="parent"  />
    <Button
        android:id="@+id/button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarAcercaDe"
        android:text="@string/accion_acerca_de"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/button02"
        app:layout_constraintStart_toEndOf="@+id/button000"
        app:layout_constraintTop_toTopOf="parent"  />

    <Button
        android:id="@+id/button02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="entrar"
        android:text="@string/entrar"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/button03"
        app:layout_constraintStart_toEndOf="@+id/button01"
        app:layout_constraintTop_toTopOf="parent"  />

    <Button
        android:id="@+id/button03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="salir"
        android:text="@string/salir"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button02"
        app:layout_constraintTop_toTopOf="parent"  />
    <Button
        android:id="@+id/button04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarBusqueda"
        android:text="@string/buscar"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button03"
        app:layout_constraintTop_toTopOf="parent"  />
        <Button
            android:id="@+id/button05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="lanzarMyFavMovies"
            android:text="@string/fav_movies"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button04"
            app:layout_constraintTop_toTopOf="parent"  />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
